# horae

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.gitlab/issue_templates/: bug-report.md  feature-request.md  task.md
radicale/: config  users.example
src/horae/: app.py  calendar.py  config.py  llm.py  models.py  parser.py  scheduler.py  sync.py
tests/: conftest.py  test_app.py  test_calendar.py  test_config.py  test_llm.py  test_models.py  test_parser.py  test_scheduler.py  test_sync.py
